--- a/source/AndroidManifest.xml
+++ b/source/AndroidManifest.xml
@@ -15,10 +15,22 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.android.accessorydisplay.source" >
-
+    package="com.android.accessorydisplay.source"
+    >
+    <!-- android:sharedUserId="android.uid.system" -->
     <uses-feature android:name="android.hardware.usb.accessory"/>
     <uses-sdk android:minSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <!-- android:protectionLevel="signature|system" -->
+    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT"/>
+    <uses-permission android:name="android.permission.CAPTURE_SECURE_VIDEO_OUTPUT"/>
+
+    <!-- android:protectionLevel="signature" -->
+    <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER"/>
+    <uses-permission android:name="android.permission.INJECT_EVENTS"/>
 
     <application android:label="@string/app_name"
             android:icon="@drawable/ic_app"
@@ -36,6 +48,16 @@
             <meta-data android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
                     android:resource="@xml/usb_accessory_filter"/>
         </activity>
-
+    <activity android:name=".RecordScreenActivity"
+                android:label="RecordScreenActivity"
+                android:theme="@android:style/Theme.Holo">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
+                    android:resource="@xml/usb_accessory_filter"/>
+        </activity>
     </application>
 </manifest>
